.gitignore, docs base

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,56 @@
+*.swp
+*.swo
+/.vs
+/Debug
+*.sdf
+/x64
+*.VC.opendb
+*.TMP
+/Tinge/x64
+/Tinge/Debug
+/output
+*.psess
+*.vsp
+/src/x64
+*.aux
+*.pdf
+*.log
+*.toc
+*.synctex.gz
+*.out
 .idea
-cmake-build*
+*.pyc
+.DS_Store
+CMakeFiles/
+Makefile
+cmake_install.cmake
+CMakeCache.txt
+FindNumpyPath.py
+runtimes/Taichi.pyd
+runtimes/tmp*
+runtimes/task*
+runtimes/*.exe
+runtimes/*.dll
+runtimes/Release
+runtimes/RelWithDebInfo
+runtimes/*.png
+runtimes/taichi_core*
+runtimes/libtaichi_core*
+.pypirc
+python/dist
+python/MANIFEST
+build/
+bin/
+tmp/
+cmake-build-*
+/projects/*
+!/projects/examples
+modules.txt
+/external/lib
 __pycache__
-outputs
-*.mp4
-tmp
+/outputs
+*.ppm
+*.png
+*.jpg
+*.ini
+videos
