Fixed memory access - no reference to kernel launch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if ($ENV{CUDA_ARCH})
     find_package(CUDA 8.0 REQUIRED)
     set(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
     #set(CUDA_NVCC_FLAGS ${CMAKE_CXX_FLAGS} ${CUDA_NVCC_FLAGS} -arch=compute_$ENV{CUDA_ARCH} -code=sm_$ENV{CUDA_ARCH} -Xcompiler "-fPIC" --maxrregcount 64 --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -code=sm_$ENV{CUDA_ARCH} -arch=compute_$ENV{CUDA_ARCH} -Xcompiler "-fPIC" --maxrregcount 64 --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -code=sm_$ENV{CUDA_ARCH} -arch=compute_$ENV{CUDA_ARCH} -Xcompiler "-fPIC" --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -D__CUDA_ARCH___=$ENV{CUDA_ARCH}0 -std=c++14)
     message("NVCC Flags: ${CUDA_NVCC_FLAGS}")
     set(CUDA_PROPAGATE_HOST_FLAGS ON)
