--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(TAICHI_PROJECT_NAME "differentiable_mpm")
 
-file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp" "src/*.h" "src/*/*.h" "src/*/*.cpp" "src/*.cuh")
+file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp" "src/*.h" "src/*/*.h" "src/*/*.cpp" "src/*.cuh" "src/*.cc")
 file(GLOB_RECURSE PROJECT_SOURCES_CUDA "src/*.cu")
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
@@ -17,9 +17,12 @@ execute_process(COMMAND ${PYTHON_EXECUTABLE} -c
         sys.stdout.write(tf.sysconfig.get_lib())"
         OUTPUT_VARIABLE TF_LIBRARY_DIR)
 
+
+
 message("Including tensorflow include dir: ${TF_INCLUDE_DIRS}")
 message("          tensorflow library dir: ${TF_LIBRARY_DIR}")
 include_directories(${TF_INCLUDE_DIRS})
+
 
 if ($ENV{CUDA_ARCH})
     message("CUDA Arch: $ENV{CUDA_ARCH}")
