--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,19 +26,21 @@ include_directories(${TF_INCLUDE_DIRS})
 
 include_directories(external/partio/include)
 
-if ($ENV{CUDA_ARCH})
-    message("CUDA Arch: $ENV{CUDA_ARCH}")
-    find_package(CUDA 8.0 REQUIRED)
-    set(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
-    #set(CUDA_NVCC_FLAGS ${CMAKE_CXX_FLAGS} ${CUDA_NVCC_FLAGS} -arch=compute_$ENV{CUDA_ARCH} -code=sm_$ENV{CUDA_ARCH} -Xcompiler "-fPIC" --maxrregcount 64 --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -Xcompiler "-fPIC" --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -D__CUDA_ARCH___=$ENV{CUDA_ARCH}0 -std=c++14)
-    message("NVCC Flags: ${CUDA_NVCC_FLAGS}")
-    set(CUDA_PROPAGATE_HOST_FLAGS ON)
-    cuda_add_library(cudmpm SHARED ${PROJECT_SOURCES_CUDA})
+if (NOT $ENV{CUDA_ARCH})
+    set(${CUDA_ARCH} 61)
 else()
-    message("Environment variable CUDA_ARCH not found. Not using CUDA.")
+    set(${CUDA_ARCH} $ENV{CUDA_ARCH})
 endif()
+
+message("CUDA Arch: ${CUDA_ARCH}")
+find_package(CUDA 8.0 REQUIRED)
+set(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
+#set(CUDA_NVCC_FLAGS ${CMAKE_CXX_FLAGS} ${CUDA_NVCC_FLAGS} -arch=compute_$ENV{CUDA_ARCH} -code=sm_$ENV{CUDA_ARCH} -Xcompiler "-fPIC" --maxrregcount 64 --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -Xcompiler "-fPIC" --use_fast_math --ptxas-options=-allow-expensive-optimizations=true,-O3)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -D__CUDA_ARCH___=${CUDA_ARCH}0 -std=c++14)
+message("NVCC Flags: ${CUDA_NVCC_FLAGS}")
+set(CUDA_PROPAGATE_HOST_FLAGS ON)
+cuda_add_library(cudmpm SHARED ${PROJECT_SOURCES_CUDA})
 
 add_subdirectory(external/partio)
 
